# healthcare_chronic

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  Makefile  Makefile_BACKUP_19262  Makefile_BASE_11795  README.md  TAGS  cpplint.py  docs  fast_dp_fitness.cc  health_dp_main.cc  mono_crash.d4716fb0.0.json  tests_main.cc  utilBase_conf.json  utilBase_deathSqrProb_conf.json
R/: MakeLookupGraphsInvest.R  MakeLookupGraphsInvestBandWidthLowMid.R  MakeLookupGraphsInvestBandWidthLowMidR.R  MakeLookupGraphsInvestBandWidthLowMid_F.R  MakeLookupGraphsInvestBandWidthLowMid_F2.R  MakeLookupGraphsInvestBandWidthLowMid_par.R  MakeLookupGraphsInvest_F.R  MakeLookupGraphsInvest_SD.R  MakeLookupGraphsInvest_SD_par.R  MakeLookupGraphsInvest_SD_par.R.R  MakeLookupGraphsInvest_SD_par_Backup.R
configs/: actuarial_flat_45_100.json  actuarial_flat_45_90.json  actuarial_flat_45_95.json  actuarial_flat_60.json  actuarial_flat_60_100.json  actuarial_flat_60_90.json  actuarial_flat_60_95.json  actuarial_flat_75_100.json  actuarial_flat_75_90.json  actuarial_flat_75_95.json  actuarial_increasing_30_90_100.json  actuarial_increasing_30_90_90.json  actuarial_increasing_30_90_95.json  config_readme.txt  employer_flat_60.json  generated_life_reader.py  ms6_s150_gc30_gh10_dt10_dh10_pm15_d15_p30_d100_act.json  ms6_s150_gc30_gh10_dt10_dh10_pm15_d15_p30_d100_emp.json  ms6_s150_gc30_gh20_dt10_dh10_pm15_d15_p30_d100_act.json  ms6_s150_gc30_gh20_dt10_dh10_pm15_d15_p30_d100_emp.json  ms6_s150_gc30_gh30_dt10_dh10_pm15_d15_p30_d100_act.json  ms6_s150_gc30_gh30_dt10_dh10_pm15_d15_p30_d100_emp.json  output_reader.py  sample_template.json  sample_variations.json  shock_enjoy_actuarial.json  shock_enjoy_employer.json  template.json  template10.json  template11.json  template12.json  template2.json  template2SR.json  template3.json  template4.json  template5.json  template5.json_bak  template6.json  template7.json  template8.json  (+23 more)
configs/60_periods/: actuarial_flat_45_90.json  actuarial_flat_45_95.json  actuarial_flat_60_90.json  actuarial_flat_75_90.json  actuarial_flat_75_95.json  actuarial_increasing_30_90_100.json  actuarial_increasing_30_90_90.json  actuarial_increasing_30_90_95.json
configs/60_periods2/: actuarial_flat_60_100_30p.json  actuarial_flat_60_100_60p.json  actuarial_flat_75_100_30p.json  actuarial_flat_75_100_60p.json  actuarial_increasing_30_90_100_30p.json  employer_flat_60_30p_50.json  employer_increasing_30_90_30p_50.json
configs/obsolete/: baseline_actuarial.json  baseline_employer.json  health_enjoy_actuarial.json  health_enjoy_employer.json
configs/prev_2_6/: actuarial_flat_35.json  actuarial_flat_42.json  actuarial_flat_70.json  actuarial_increasing_40_100.json  employer12_flat_42.json  employer12_flat_70.json  employer15_flat_70.json  employer16_flat_70.json  employer8_flat_35.json  employer9_flat_42.json  employer_flat_35.json  employer_flat_70.json
configs/previous/: actuarial_wp_1.json  actuarial_wp_2.json  actuarial_wp_3.json  actuarial_wp_4.json  shock_enjoy_actuarial.json
configs/simple_tests/: flat_income_test.json  increasing_income_test.json
configs/temp/: actuarial_flat_60_95.json
docs/: config_readme.txt
include/dp/: decision_cache.h  storage.h
include/healthcare/: configuration.h  configuration_reader.h  decision.h  decision_evaluator.h  decision_results.h  enjoyment.h  fitness.h  fitness_func.h  insurance.h  job.h  job_func.h  joy.h  joy_func.h  modifier.h  modulator.h  period_result.h  person.h  person_income.h  prob_dependent_func.h  prob_func.h  probability.h  shifter.h  utility_func.h
include/healthcare/configuration/: fitness_reader.h  insurance_reader.h  job_reader.h  joy_reader.h  modulator_reader.h  prob_reader.h  reader.h
include/healthcare/enjoyment/: fractional.h
include/healthcare/fitness/: composite.h  fixed_price.h  flat_loss.h  proportional_loss.h  quadratic_cost.h
include/healthcare/insurance/: actuarial.h  fixed.h
include/healthcare/job/: age_linear.h  defined.h  flat.h
include/healthcare/joy/: fractional.h  health_dependent.h  health_dependent_dustin.h  health_dependent_fan.h  health_dependent_steve.h  mod_decorator.h  shift_decorator.h
include/healthcare/modifier/: composite.h  constant.h  cosine.h  double_type.h  fractional.h  linear.h  param_modulator.h  single_type.h  sqrt_cosine.h
include/healthcare/modulator/: constant.h  fitness_cosine.h  fitness_fractional.h  fitness_linear.h  shock_cosine.h  (+2 more)
output/: .~lock.actuarial_flat_60_100.csv#  .~lock.actuarial_flat_60_100_rand_lives.csv#  .~lock.res.csv#  generated_life_reader.py  health_plot_maker.py  mingw_output_reader.py  output_reader.py  output_reader_bak.py  payout_table_maker.py  plot_maker.py  plot_maker_health.py
output/orig/: ms6_ss300_j40_jc_pc80_pr80_pm100_pj30_d18_p30_dc100_act_rand_lives.csv  ms6_ss300_j40_jc_pc80_pr80_pm100_pj30_d18_p30_dc100_emp_rand_lives.csv  ms6_ss300_j40_jc_pc80_pr80_pm100_pj30_d18_p30_dc80_act_rand_lives.csv  ms6_ss300_j40_jc_pc80_pr80_pm100_pj30_d18_p30_dc80_emp_rand_lives.csv  ms6_ss300_j40_jc_pc80_pr80_pm100_pj30_d18_p30_dc90_act_rand_lives.csv  ms6_ss300_j40_jc_pc80_pr80_pm100_pj30_d18_p30_dc90_emp_rand_lives.csv  ms6_ss300_j40_jl_pc80_pr80_pm100_pj30_d18_p30_dc100_act_rand_lives.csv  ms6_ss300_j40_jl_pc80_pr80_pm100_pj30_d18_p30_dc100_emp_rand_lives.csv  ms6_ss300_j40_jl_pc80_pr80_pm100_pj30_d18_p30_dc80_act_rand_lives.csv  ms6_ss300_j40_jl_pc80_pr80_pm100_pj30_d18_p30_dc80_emp_rand_lives.csv  ms6_ss300_j40_jl_pc80_pr80_pm100_pj30_d18_p30_dc90_act_rand_lives.csv  ms6_ss300_j40_jl_pc80_pr80_pm100_pj30_d18_p30_dc90_emp_rand_lives.csv
scripts/: make_run_configs.sh  run_configs.sh  run_configs_mingw.sh
src/dp/: decision_cache.cc  storage.cc
src/healthcare/: configuration.cc  decision.cc  decision_evaluator.cc  fitness_func.cc  job_func.cc  joy_func.cc  period_result.cc  person.cc  prob_dependent_func.cc  prob_func.cc  utility_func.cc
test/dp/: health_decision_iterator_tests.cc  health_dp_storage_tests.cc  health_state_iterator_tests.cc
test/healthcare/: decision_test.cc  flat_test.cc  person_tests.cc  t_person_tests.cc
(+59 files in other folders)
